[gd_scene load_steps=3 format=3 uid="uid://ckmrtaqusfkec"]

[ext_resource type="Script" path="res://addons/noded/story_settings/nodes/noded_culture_node.gd" id="1_otmm0"]
[ext_resource type="Texture2D" uid="uid://tgf80iy5mtie" path="res://addons/noded/icons/fairy-wand_lorc.png" id="1_ysrhe"]

[node name="CultureNode" type="GraphNode"]
custom_minimum_size = Vector2(256, 0)
offset_left = 507.0
offset_top = 179.0
offset_right = 789.0
offset_bottom = 485.0
mouse_filter = 1
position_offset = Vector2(483, 155)
title = "Culture"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_otmm0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="CultNameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Draegan, Nautalis..."

[node name="CultureNameGenBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Generate a name for this culture"
icon = ExtResource("1_ysrhe")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Classification"

[node name="CultureTpSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 6
selected = 0
popup/item_0/text = "General"
popup/item_0/id = 0
popup/item_1/text = "Wariors"
popup/item_1/id = 1
popup/item_2/text = "Mystic"
popup/item_2/id = 2
popup/item_3/text = "Coastal"
popup/item_3/id = 3
popup/item_4/text = "Trading"
popup/item_4/id = 4
popup/item_5/text = "Earth-Based"
popup/item_5/id = 5

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="DescriptTextEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
wrap_mode = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CultureNameGenBtn" to="." method="_on_culture_name_gen_btn_pressed"]
